@@ -238,8 +238,9 @@ L<http://skim.cz/>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2014-2015 Michal Josef Špaček
- BSD 2-Clause License
+© 2014-2015 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
