@@ -146,8 +146,9 @@ AUTHOR
     <http://skim.cz/>
 
 LICENSE AND COPYRIGHT
-     © 2014-2015 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2014-2015 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.05
